@@ -19,7 +19,7 @@ from .lib import openjp2 as opj2
 
 # Do not change the format of this next line!  Doing so risks breaking
 # setup.py
-version = "0.6.0"
+version = "0.7.0rc1"
 _sv = LooseVersion(version)
 version_tuple = _sv.version
 
